--- a/index.html
+++ b/index.html
@@ -1,47 +1,68 @@
-<!-- Any website -->
+<!DOCTYPE html>
+<html>
+<head>
 
-<header>
-  <h1>Hidden Website</h1>
-  <nav>
-    <a href=#>About</a>
-    <a href=#>Blog</a>
-    <a href=#>Contact</a>
-  </nav>
-</header>
-<main>
-  <section>
-    <article>
-      <h2>Hidden Headline</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fugit earum voluptas officia, quasi saepe et commodi, dolores cumque quam fuga ullam, itaque ea dignissimos asperiores adipisci ad eveniet repellendus!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fugit earum voluptas officia, quasi saepe et commodi, dolores cumque quam fuga ullam, itaque ea dignissimos asperiores adipisci ad eveniet repellendus!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fugit earum voluptas officia, quasi saepe et commodi, dolores cumque quam fuga ullam, itaque ea dignissimos asperiores adipisci ad eveniet repellendus!</p>
-    </article>
-    <article>
-      <h2>Headline</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fugit earum voluptas officia, quasi saepe et commodi, dolores cumque quam fuga ullam, itaque ea dignissimos asperiores adipisci ad eveniet repellendus!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fugit earum voluptas officia, quasi saepe et commodi, dolores cumque quam fuga ullam, itaque ea dignissimos asperiores adipisci ad eveniet repellendus!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fugit earum voluptas officia, quasi saepe et commodi, dolores cumque quam fuga ullam, itaque ea dignissimos asperiores adipisci ad eveniet repellendus!</p>
-    </article>
-    <article>
-      <h2>Headline</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fugit earum voluptas officia, quasi saepe et commodi, dolores cumque quam fuga ullam, itaque ea dignissimos asperiores adipisci ad eveniet repellendus!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fugit earum voluptas officia, quasi saepe et commodi, dolores cumque quam fuga ullam, itaque ea dignissimos asperiores adipisci ad eveniet repellendus!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fugit earum voluptas officia, quasi saepe et commodi, dolores cumque quam fuga ullam, itaque ea dignissimos asperiores adipisci ad eveniet repellendus!</p>
-    </article>
+  <title> Mouse Over</title>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <style>
+    .eric {
+      background: url(https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/reference_guide/cats_and_excessive_meowing_ref_guide/1800x1200_cats_and_excessive_meowing_ref_guide.jpg);
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+    }
+
+    /* Flashlight overlay*/
+
+    :root {
+      cursor: none;
+      --cursorX: 50vw;
+      --cursorY: 50vw;
+    }
+
+    :root:before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      pointer-events: none;
+      background: radial-gradient(circle 10vmax at var(--cursorX) var(--cursorY),
+      rgba(0,0,0,0) 0%,
+      rgba(0,0,0,5) 80%,
+      rgba(0,0,0,95) 100%
+      )
+    }
+
+  </style>
+
+</head>
+
+
+<body>
+
+  <section class="eric">
+
   </section>
-  <aside>
-    <div class=capsule>
-      <h3>Widget Headline</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-    <div class=capsule>
-      <h3>Widget Headline</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-    <div class=capsule>
-      <h3>Widget Headline</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-  </aside>
-</main>
-<footer>footer content</footer>
+
+  <script type="text/javascript">
+
+    function update(e){
+      var x = e.clientX || e.touches[0].clientX
+      var y = e.clientY || e.touches[0].clientY
+
+      document.documentElement.style.setProperty('--cursorX', x + 'px')
+      document.documentElement.style.setProperty('--cursorY', y + 'px')
+
+    }
+
+    document.addEventListener('mousemove',update)
+    document.addEventListener('touchmove',update)
+
+  </script>
+
+
+</body>
+</html>
