--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title> Mouse Over</title>
+  <title> Shine a Light</title>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -14,7 +14,7 @@
       height: 100vh;
     }
 
-    /* Flashlight overlay*/
+    /* Light me up!!*/
 
     :root {
       cursor: none;
